spacing issue fix for skills

--- a/css/index.styl
+++ b/css/index.styl
@@ -201,7 +201,7 @@ p
   min-height 500px
   padding 50px 0px 100px 0px
   .skill
-    margin-bottom 80px
+    height 300px
     h3
       display inline-block
       margin 0
@@ -213,9 +213,6 @@ p
     img
       width 100%
       max-height 100px
-      margin-bottom 10px
-  .skill-row:last-child
-    .skill
       margin-bottom 10px
 
     
